sample/error/eval_unexpected-non-index.bfr
codegen [
  $build {
    a: array(3) { x: cell }
  } in
  > a@x
]